AdvancedNetworkSpecialist/110_AWSClientVpn/110_SecurityGroups.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: This template create all Security Groups

Parameters:
  # Global parameters
  Bucket:
    Default: "hawkfund-cloudformation"
    Description: CloudFormation buket URL
    Type: String
  BucketKey:
    Default: "110_AWSClientVpn"
    Description: Key to find object in the bucket
    Type: String
  BucketObject:
    Default: "Data.json"
    Description: "File to store data in the bucket"
    Type: String
  BucketRegion:
    AllowedValues: ["eu-west-3", "eu-central-1"]
    Default: "eu-west-3"
    Description: "Region where is the Bucket"
    Type: String
  EnvironmentName:
    AllowedValues: ["dev", "staging", "test", "prod"]
    ConstraintDescription: "Must specify dev, staging, test or prod"
    Default: "dev"
    Description: "Environment name that prefix all resources"
    Type: String
  ProjectName:
    Default: "ANS"
    Description: "Project name that prefix all resources"
    Type: String
  SaveInS3File:
    AllowedValues: ["false", "true"]
    Default: "false"
    Description: "Save resources information in s3 file"
    Type: String

  # Stack parameters
  ApplicationInstanceIngressCidrIp:
    Description: "Ingress CIDR IP for Application Instance"
    Default: "0.0.0.0/0"
    Type: String
  BastionInstanceIngressCidrIp:
    Description: "Ingress CIDR IP for Bastion Instance"
    Default: "0.0.0.0/0"
    Type: String
  VpcId:
    Type: String

Conditions:
  SaveInS3File: !Equals [!Ref SaveInS3File, "true"]

Resources:
  BastionInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security Group for Bastion"
      GroupName: "BastionInstanceSecurityGroup"
      SecurityGroupIngress:
        - CidrIp: !Ref BastionInstanceIngressCidrIp
          FromPort: -1
          IpProtocol: icmp
          ToPort: -1
        - CidrIp: !Ref BastionInstanceIngressCidrIp
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${EnvironmentName}-Default-SG"
      VpcId: !Ref VpcId

  BastionInstanceSecurityGroupToS3:
    Type: AWS::CloudFormation::CustomResource
    Condition: SaveInS3File
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      ServiceToken:
        !Join [
          ":",
          [
            "arn:aws:lambda",
            !Sub "${AWS::Region}",
            !Sub "${AWS::AccountId}",
            "function:Ec2ResourceToS3",
          ],
        ]
      ServiceTimeout: 60
      Bucket: !Ref Bucket
      BucketKey: !Ref BucketKey
      BucketObject: !Ref BucketObject
      Region: !Ref AWS::Region
      ResourceType: "SecurityGroup"
      Key: !Sub "${AWS::Region}:${ProjectName}:${EnvironmentName}:EC2:SecurityGroup:Bastion"
      Value: !Ref BastionInstanceSecurityGroup

  ENISecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for ENI"
      GroupName: "ENISecurityGroup"
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${EnvironmentName}-ENI-SG"
      VpcId: !Ref VpcId

  ENISecurityGroupToS3:
    Type: AWS::CloudFormation::CustomResource
    Condition: SaveInS3File
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      ServiceToken:
        !Join [
          ":",
          [
            "arn:aws:lambda",
            !Sub "${AWS::Region}",
            !Sub "${AWS::AccountId}",
            "function:Ec2ResourceToS3",
          ],
        ]
      ServiceTimeout: 60
      Bucket: !Ref Bucket
      BucketKey: !Ref BucketKey
      BucketObject: !Ref BucketObject
      Region: !Ref AWS::Region
      ResourceType: "SecurityGroup"
      Key: !Sub "${AWS::Region}:${ProjectName}:${EnvironmentName}:EC2:SecurityGroup:ENI"
      Value: !Ref ENISecurityGroup

  ApplicationSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for Application"
      GroupName: "ApplicationSecurityGroup"
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref BastionInstanceSecurityGroup
          IpProtocol: -1
        - SourceSecurityGroupId: !Ref ENISecurityGroup
          IpProtocol: -1
        - CidrIp: !Ref ApplicationInstanceIngressCidrIp
          FromPort: -1
          IpProtocol: icmp
          ToPort: -1
        - CidrIp: !Ref ApplicationInstanceIngressCidrIp
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${EnvironmentName}-Application-SG"
      VpcId: !Ref VpcId

  ApplicationSecurityGroupToS3:
    Type: AWS::CloudFormation::CustomResource
    Condition: SaveInS3File
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      ServiceToken:
        !Join [
          ":",
          [
            "arn:aws:lambda",
            !Sub "${AWS::Region}",
            !Sub "${AWS::AccountId}",
            "function:Ec2ResourceToS3",
          ],
        ]
      ServiceTimeout: 60
      Bucket: !Ref Bucket
      BucketKey: !Ref BucketKey
      BucketObject: !Ref BucketObject
      Region: !Ref AWS::Region
      ResourceType: "SecurityGroup"
      Key: !Sub "${AWS::Region}:${ProjectName}:${EnvironmentName}:EC2:SecurityGroup:Application"
      Value: !Ref ApplicationSecurityGroup

Outputs:
  BastionInstanceSecurityGroupId:
    Description: "Security GroupId for the Bastion"
    Value: !GetAtt BastionInstanceSecurityGroup.GroupId
  ApplicationInstanceSecurityGroupId:
    Description: "Security GroupId for the Application"
    Value: !GetAtt ApplicationSecurityGroup.GroupId
